# steady_grewp

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  app.py  delete-later.html  generate_article_templates.py  main.py  pyproject.toml  requirements.txt
.chalice/: config.json
articles/: article_name.md
templates/: article.html  article_name.html  footer.html  header.html
