[project]
name = "steady-grewp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chalice>=1.31.4",
    "jinja2>=3.1.6",
    "mistune>=3.1.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
